@@ -30,9 +30,7 @@ import au.edu.qut.yawl.editor.swing.TooltipTogglingWidget;
 import au.edu.qut.yawl.editor.swing.menu.ControlFlowPalette;
 
 public class MultipleCompositeTaskAction extends ControlFlowPaletteAction implements TooltipTogglingWidget {
-  /**
-   * 
-   */
+
   private static final long serialVersionUID = 1L;
 
   {
@@ -40,6 +38,10 @@ public class MultipleCompositeTaskAction extends ControlFlowPaletteAction implem
     putValue(Action.NAME, "Multiple Composite Task");
     putValue(Action.LONG_DESCRIPTION, "Add a new Multiple Composite Task");
     putValue(Action.SMALL_ICON, getPaletteIconByName("PaletteMultipleCompositeTask"));
+  }
+  
+  public MultipleCompositeTaskAction(ControlFlowPalette palette) {
+    super(palette);
   }
   
   public String getEnabledTooltipText() {
